fix: 修复 Vercel 部署问题
- 修复缺失的 logo 文件引用，创建 yuxuan-logo.svg 替代已删除的 uumi-logo.png
- 解决 vercel.json 和 next.config.ts 的缓存策略冲突
- 更新 package.json 项目名称和描述
- 更新 README 文档中的 logo 引用
- 清理已删除的图片文件引用

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "newshilong-tech-site",
+  "name": "yuxuan-tax-site",
   "version": "1.0.0",
   "private": true,
-  "description": "新石龙科技 (New Shi Long Tech) - 优质羊肚菌全球贸易商 | Premium Morel Mushrooms International Trade",
+  "description": "四川省煜轩财税咨询有限公司官网 - 智能财税服务 | Sichuan Yuxuan Tax Consulting Co., Ltd.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
