--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "form-data": "^4.0.4",
     "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.0.10",
     "node-fetch": "^2.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
